ERROR.txt

stable.c:3:10: error: unknown type name ‘string’
 int hash(string *key){
          ^
stable.c:15:16: error: unknown type name ‘localTS’
 int LtableInit(localTS *T){
                ^
stable.c:23:17: error: unknown type name ‘localTS’
 int LtableFree (localTS *T){
                 ^
stable.c:42:19: error: unknown type name ‘localTS’
 int LtableInsert (localTS *T, string *key, int varType){
                   ^
stable.c:42:31: error: unknown type name ‘string’
 int LtableInsert (localTS *T, string *key, int varType){
                               ^
stable.c:61:1: error: unknown type name ‘tLData’
 tLData *LtableSearch (localTS *T, string *key){
 ^
stable.c:61:23: error: unknown type name ‘localTS’
 tLData *LtableSearch (localTS *T, string *key){
                       ^
stable.c:61:35: error: unknown type name ‘string’
 tLData *LtableSearch (localTS *T, string *key){
                                   ^
stable.c:82:24: error: unknown type name ‘localTS’
 int LtableInsertValue (localTS *T, string *key, Tvalue v){
                        ^
stable.c:82:36: error: unknown type name ‘string’
 int LtableInsertValue (localTS *T, string *key, Tvalue v){
                                    ^
stable.c:82:49: error: unknown type name ‘Tvalue’
 int LtableInsertValue (localTS *T, string *key, Tvalue v){
                                                 ^
stable.c:114:17: error: unknown type name ‘globalTS’
 int GtableInit (globalTS *T){
                 ^
stable.c:122:17: error: unknown type name ‘globalTS’
 int GtableFree (globalTS *T){
                 ^
stable.c:145:19: error: unknown type name ‘globalTS’
 int GtableInsert (globalTS *T, string *key, int funcType){
                   ^
stable.c:145:32: error: unknown type name ‘string’
 int GtableInsert (globalTS *T, string *key, int funcType){
                                ^
stable.c:181:1: error: unknown type name ‘tGData’
 tGData* GtableSearch (globalTS *T, string *key){
 ^
stable.c:181:23: error: unknown type name ‘globalTS’
 tGData* GtableSearch (globalTS *T, string *key){
                       ^
stable.c:181:36: error: unknown type name ‘string’
 tGData* GtableSearch (globalTS *T, string *key){
                                    ^
stable.c:202:22: error: unknown type name ‘globalTS’
 int GtableInsertVar (globalTS *T, string *funcID, string *varID, int varType){
                      ^
stable.c:202:35: error: unknown type name ‘string’
 int GtableInsertVar (globalTS *T, string *funcID, string *varID, int varType){
                                   ^
stable.c:202:51: error: unknown type name ‘string’
 int GtableInsertVar (globalTS *T, string *funcID, string *varID, int varType){
                                                   ^
stable.c:215:25: error: unknown type name ‘globalTS’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v){
                         ^
stable.c:215:38: error: unknown type name ‘string’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v){
                                      ^
stable.c:215:54: error: unknown type name ‘string’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v){
                                                      ^
stable.c:215:69: error: unknown type name ‘Tvalue’
 int GtableInsertVarVal (globalTS *T, string *funcID, string *varID, Tvalue v){
                                                                     ^
stable.c:228:24: error: unknown type name ‘globalTS’
 int GtableInsertParam (globalTS *T, string *funcID, string *parID, int parType){
                        ^
stable.c:228:37: error: unknown type name ‘string’
 int GtableInsertParam (globalTS *T, string *funcID, string *parID, int parType){
                                     ^
stable.c:228:53: error: unknown type name ‘string’
 int GtableInsertParam (globalTS *T, string *funcID, string *parID, int parType){
                                                     ^
stable.c:249:24: error: unknown type name ‘globalTS’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce){
                        ^
stable.c:249:37: error: unknown type name ‘string’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce){
                                     ^
stable.c:249:53: error: unknown type name ‘Tinst’
 int GtableInsertInstr (globalTS *T, string *funcID, Tinst *instrukce){


